--- a/.github/workflows/deployment-script.yml
+++ b/.github/workflows/deployment-script.yml
@@ -1,33 +1,42 @@
- 
-# This workflow is used to build the experiment and push it to github pages
+# Simple workflow for deploying static content to GitHub Pages
+name: Deploy static content to Pages
 
-name: Deploy Testing Branch
 on:
+  # Runs on pushes targeting the default branch
   push:
-# mentioning which branch should be used to build the experimnet
-    branches: 
-      - main
+    branches: ["main"]
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow one concurrent deployment
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
+
 jobs:
-  build:
+  # Single deploy job since we're just deploying
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Setup node
-      uses: actions/setup-node@v2
-      with:
-            node-version: '12'
-            check-latest: true
-    - run: |
-        git config --local user.email "admin@vlabs.ac.in"
-        git config --local user.name "vleadadmin"
-        git checkout --orphan gh-pages
-        git reset
-        git add * -f
-        git mv * ./ -f
-        git commit -m "https://virtual-labs.github.io/${{ github.repository }} click on the link to test your code."
-    - uses: ad-m/github-push-action@master
-      with:
-        github_token: ${{ secrets.ORG_OWNER_GITHUB_TOKEN }}
-        force: true
-        branch: gh-pages
- # Reference : https://github.com/marketplace/actions/github-push
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup Pages
+        uses: actions/configure-pages@v2
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
+        with:
+          # Upload entire repository
+          path: '.'
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v1
