--- a/.github/workflows/deployment-script.yml
+++ b/.github/workflows/deployment-script.yml
@@ -1,11 +1,11 @@
 # This workflow is used to build the experiment and push it to github pages
 
-name: Deploy Testing Branch
+name: Deploy Main Branch
 on:
   push:
 # mentioning which branch should be used to build the experimnet
     branches: 
-      - testing
+      - main
 jobs:
   build:
     runs-on: ubuntu-latest
